# C21

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  alice_hn.txt  bob_h0.txt  config_alice.json  config_bob.json
src/network/: NetworkManager.cpp  NetworkManager.h
tools/gen_chain/: gen_chain  hash_chain.txt
